--- a/appinfo.json
+++ b/appinfo.json
@@ -15,12 +15,12 @@
                 "file": "images/menu_icon_UCONN.png",
                 "menuIcon": true,
                 "name": "IMAGE_MENU_ICON",
-                "type": "png"
+                "type": "bitmap"
             },
             {
                 "file": "images/UCONN_Color.png",
                 "name": "IMAGE_UCONN_COLOR_LOGO",
-                "type": "png"
+                "type": "bitmap"
             },
             {
                 "file": "fonts/Robots-Bold.ttf",
@@ -57,6 +57,7 @@
     "sdkVersion": "3",
     "shortName": "UCONN-Wx",
     "targetPlatforms": [
+        "aplite",
         "basalt"
     ],
     "uuid": "a050a063-36e1-42ed-8cde-f42cf90158e7",
