--- a/appinfo.json
+++ b/appinfo.json
@@ -7,6 +7,7 @@
         "location"
     ],
     "companyName": "wa1oui",
+    "enableMultiJS": false,
     "longName": "UCONN-Wx",
     "projectType": "native",
     "resources": {
@@ -61,7 +62,7 @@
         "basalt"
     ],
     "uuid": "a050a063-36e1-42ed-8cde-f42cf90158e7",
-    "versionLabel": "1.0",
+    "versionLabel": "1.1",
     "watchapp": {
         "watchface": true
     }
